# 0.00.05 (41764) Jun 17, 2010
Fixed: Chart cursor goes off chart when zoomed in
Fixed: zoom button should have plus on top and right
Added tree and house graphics
# 0.00.04 (41679) Jun 14, 2010
Fixed: Sim should start up in record mode instead of playback
Fixed: Reset all should switch to record mode
Fixed: Reset all should restore playback speed to 1.0
Fixed record and playback so that chart readouts match up with the chart curve graphics
Made it so that the chart serieses are sampled at the same time, so that derivatives don't lag
# 0.00.03 (41640) Jun 14, 2010
Improved the visibility of the in-chart cursor node
Added handling for starting recording halfway through playback
Fixed: Horizontal line drawn when clearing velocity and acceleration curves
Fixed: Chart series needs to be re-transformed on component resize event
Added horizontal zoom buttons
Improvements for vertical zoom buttons
Update charts and indicator arrows when zoom changes
Added initial version of vertical zoom buttons
Fixed: Play area arrows look incorrect at small magnitudes
Hide the blue timeline bar when chart playback cursor can be used instead
Added a deceleration spike when accelerating into a wall
Fixed: Clicking on a slider with value 10000+ causes blocky areas to turn white, transform or NaN exception?
Aligned chart go button with right edge of other controls instead of centered
Switched out-of-range slider indication from thumb rotation to thumb transparency
Switched play area slider thumbs from arrows to bars
Centered play area in introduction control panel
Fixed: Chart control "go" button should have correct behavior during playback (instead of just recording)
Fixed: Chart control "go" button should also behave as a pause button instead of disappearing.
record-and-playback: 6/13/2010 Layout improvements for RecordAndPlaybackControlPanel
Added a reset all button
# 0.00.02 (41563) Jun 11, 2010
Fixed: position slider does not play back values