@@ -1,12 +1,15 @@
 package edu.colorado.phet.movingmanii.model;
 
 /**
+ * This is the persistent state for the Moving Man simulation; i.e. the state that gets recorded and played back.
+ * It is immutable because it should be impossible to change a previously recorded point.
+ *
  * @author Sam Reid
  */
 public class MovingManState {
-    private double time;//Note this time is different than the time in the recordandplaybackmodel, it will lag since we don't record a point until we have good estimates of the derivatives
-    private ManState manState;
-    private boolean walls;
+    private final double time;//The time of the sampled data point, note this time is different than the time in the recordandplaybackmodel, it will lag since we don't record a point until we have good estimates of the derivatives
+    private final ManState manState;//The state of the man character
+    private final boolean walls;//true if the walls are enabled at this point in time
 
     public MovingManState(double time, ManState manState, boolean walls) {
         this.time = time;
@@ -17,9 +20,6 @@ public class MovingManState {
     public double getTime() {
         return time;
     }
-
-    //TODO: recording just the state of the man but smoothing the data series afterwards is problematic; there will be discrepancies between the restored values and the values displayed in the chart.
-    //One potential solution: record a pointer into the array of data instead of a deep copy of data, so the value will match.
 
     public ManState getMovingManState() {
         return manState;
